--- a/EliminateSharedStreamsIssue/pom.xml
+++ b/EliminateSharedStreamsIssue/pom.xml
@@ -8,7 +8,9 @@
         <dependency>
             <groupId>com.github.librepdf</groupId>
             <artifactId>openpdf</artifactId>
-            <version>1.3.28</version>
+            <!-- <version>1.3.28</version> -->
+            <version>1.3.29-SNAPSHOT</version>
+            <!-- <version>1.3.29-SNAPSHOT-noelim</version>-->
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
